--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-# H2 Database configuration
-spring.datasource.url=jdbc:h2:mem:forohub
+server.port=3000
+#H2
+spring.datasource.url=jdbc:h2:mem:forohubdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# JWT Properties
+jwt.secret=mysecretkey
+jwt.expiration=300000
 
 # JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
@@ -16,6 +21,8 @@ spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
-#JWT
-jwt.secret=YourJWTSecretKey
-jwt.expiration=86400000
+#Springdoc
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+
